RESOLVED FIXED244210
[GStreamer][WebRTC] Prepare for ICE selected candidate pair notifications
https://bugs.webkit.org/show_bug.cgi?id=244210
Summary [GStreamer][WebRTC] Prepare for ICE selected candidate pair notifications
Philippe Normand
Reported 2022-08-22 10:29:37 PDT
ssia
Attachments
Philippe Normand
Comment 1 2022-08-22 10:31:47 PDT
EWS
Comment 2 2022-08-23 02:34:26 PDT
Committed 253678@main (91b4eeab561a): <https://commits.webkit.org/253678@main> Reviewed commits have been landed. Closing PR #3542 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-08-23 02:35:17 PDT
Note You need to log in before you can comment on or make changes to this bug.