[GStreamer][WebRTC] Prepare for ICE selected candidate pair notifications https://bugs.webkit.org/show_bug.cgi?id=244210

Reviewed by Alicia Boya Garcia.

This is only the basic signal plumbing for now. It's not yet easy to retrieve the ICE candidate
details from the agent.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerIceTransportBackend.cpp:
(WebCore::GStreamerIceTransportBackend::iceTransportChanged):
(WebCore::GStreamerIceTransportBackend::selectedCandidatePairChanged):
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerIceTransportBackend.h:

Canonical link: https://commits.webkit.org/253678@main